--- a/main.html
+++ b/main.html
@@ -13,4 +13,39 @@
 
 </body>
 
+	<div id="container">
+		<div class="item">
+			<h2>News</h2>
+			<ul>
+				<li>Article 1</li>
+				<li>Article 2</li>
+				<li>Article 3</li>
+				<li>Article 4</li>
+			</ul>
+		</div>
+		<div class="item">
+			<h2></h2>
+			<ul>
+				<li>Article 1</li>
+				<li>Article 2</li>
+			</ul>
+		</div>
+		<div class="item">
+			<h2></h2>
+			<ul>
+				<li>Article 1</li>
+				<li>Article 2</li>
+				<li>Article 3</li>
+			</ul>
+		</div>
+		<div class="item">
+			<h2></h2>
+			<ul>
+				<li>Article 1</li>
+				<li>Article 2</li>
+				<li>Article 3</li>
+				<li>Article 4</li>
+			</ul>
+		</div>
+	</div>
 </html>
