--- a/main.html
+++ b/main.html
@@ -24,14 +24,14 @@
 			</ul>
 		</div>
 		<div class="item">
-			<h2></h2>
+			<h2>Reviews</h2>
 			<ul>
 				<li>Article 1</li>
 				<li>Article 2</li>
 			</ul>
 		</div>
 		<div class="item">
-			<h2></h2>
+			<h2>Tips & Tricks</h2>
 			<ul>
 				<li>Article 1</li>
 				<li>Article 2</li>
@@ -39,12 +39,13 @@
 			</ul>
 		</div>
 		<div class="item">
-			<h2></h2>
+			<h2>Interviews</h2>
 			<ul>
 				<li>Article 1</li>
 				<li>Article 2</li>
 				<li>Article 3</li>
 				<li>Article 4</li>
+				<li>Article 5</li>
 			</ul>
 		</div>
 	</div>
